# -_SQL_

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: vacancies_hh.json
log/: README.md
src/: accessing_database.py  base_classes.py  db_manager.py  getting_from_api.py
test/: conftest.py  test_db_manager.py
